--- a/dat255/res/values/strings.xml
+++ b/dat255/res/values/strings.xml
@@ -4,5 +4,8 @@
     <string name="app_name">dat255</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
+    <string name="join_game">Join Game</string>
+    <string name="name">Enter your name:</string>
+    <string name="join">Join Game</string>
 
 </resources>
